@@ -111,6 +111,9 @@ released late in 2009.
 1)  A typo in the IPv6 two-interface Sample shorewall6.conf file has
     been corrected.
 
+2)  When a valid mnemonic such as 'tos-minimize-delay' appeared in the TOS
+    column of /etc/shorewall/tcfilters, a compile-time error resulted.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
