@@ -2,6 +2,8 @@ Changes in Shorewall 4.3.13
 
 1)  Correct typo in Shorewall6 two-interface sample shorewall.conf.
 
+2)  Fix TOS mnemonic handling in /etc/shorewall/tcfilters.
+
 Changes in Shorewall 4.3.12
 
 1) Eliminate 'large quantum' warnings.
